[tool.poetry]
name = "repl_python3_MonkePaw"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.2"
replit = "^3.2.4"
youtube_dl = "^2021.12.17"
pafy = "^0.5.5"
google_images_download = "^2.8.0"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
